Corrected Dataset.__init__() to properly work with the parent class, textacy.datasets.Wikipedia

--- a/_dataset.ipynb
+++ b/_dataset.ipynb
@@ -2,37 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "code_folding": []
+   },
    "outputs": [],
    "source": [
-    "from textacy.datasets import Wikipedia\n",
-    "from dataset import get_related_pages"
+    "# from textacy.datasets import Wikipedia\n",
+    "import textacy\n",
+    "from textacy.datasets import Wikipedia"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "code_folding": [
-     11.0,
-     13.0,
-     20.0,
-     25.0
+     2.0,
+     7.0,
+     9.0,
+     17.0,
+     21.0
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Wikipedia' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-880a4151948d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 'class Dataset'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mWikipedia\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtitle_filter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcategory_filter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtitle_filter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtitle_filter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Wikipedia' is not defined"
+     ],
+     "output_type": "error"
+    }
+   ],
    "source": [
-    "class Dataset(Wikipedia):\n",
-    "    def __init__(self, category_filter = set(), title_filter = set()):\n",
-    "        self.category_filter = category_filter\n",
+    "# 'class Dataset'\n",
+    "class Dataset(Wikipedia): \n",
+    "    def __init__(self, data_dir, title_filter=set(), category_filter=set()):\n",
+    "        super().__init__(self, data_dir)\n",
     "        self.title_filter = title_filter\n",
-    "\n",
-    "    def generate_stream(self,\n",
-    "                        category_filter = set(), \n",
-    "                        title_filter = set(),\n",
-    "                        limit = 5,\n",
-    "                        fast = True):\n",
+    "        self.category_filter = category_filter\n",
+    "    def generate_stream(self, category_filter = set(), title_filter = set(), limit = 5, fast = True):\n",
     "        \n",
     "        if not Bool(category_filter):\n",
     "            category_filter = self.category_filter\n",
@@ -41,16 +54,12 @@
     "\n",
     "        for record in self.records(limit=limit, fast=fast):\n",
     "            if record['title'] in title_filter or set(record['categories']) in category_filter:\n",
-    "                yield record\n",
-    "                \n",
+    "                yield record      \n",
     "    def split_stream(content_field='text'):\n",
     "        stream = generate_stream(self.category_filter, self.text_filter)\n",
     "        text_stream, metadata_stream = textacy.io.split_records(stream, content_field)\n",
     "        return text_stream, metadata_stream\n",
-    "    \n",
-    "    def expand_filters(self,\n",
-    "                       title_filter=None,\n",
-    "                       category_filter=None):\n",
+    "    def expand_filters(self, title_filter = None, category_filter = None):\n",
     "        \n",
     "        if title_filter is None:\n",
     "            title_filter = self.title_filter\n",
@@ -64,113 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = Dataset()"
+    "path = textacy.__file__[:-11] + '/data/wikipedia'\n",
+    "dataset = Dataset(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset.title_filter = ['Set (mathematics)']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<generator object Dataset.generate_stream at 0x10c627c50>"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset.generate_stream()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__class__',\n",
-       " '__delattr__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__iter__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '__weakref__',\n",
-       " '_parse_content',\n",
-       " '_parse_date_range',\n",
-       " 'category_filter',\n",
-       " 'content_field',\n",
-       " 'download',\n",
-       " 'filename',\n",
-       " 'generate_stream',\n",
-       " 'info',\n",
-       " 'record_limit',\n",
-       " 'records',\n",
-       " 'split_stream',\n",
-       " 'stream_fast',\n",
-       " 'texts',\n",
-       " 'title_filter']"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -214,13 +127,13 @@
      "varRefreshCmd": "cat(var_dic_list()) "
     }
    },
-   "oldHeight": 375.26086950302124,
+   "oldHeight": 228.26086950302124,
    "position": {
-    "height": "397px",
-    "left": "5.584239482879639px",
-    "right": "107.45924377441406px",
-    "top": "0.9375px",
-    "width": "800px"
+    "height": "40px",
+    "left": "865.5435180664063px",
+    "right": "3.6413044929504395px",
+    "top": "5.92391300201416px",
+    "width": "383px"
    },
    "types_to_exclude": [
     "module",
@@ -229,7 +142,7 @@
     "instance",
     "_Feature"
    ],
-   "varInspector_section_display": "block",
+   "varInspector_section_display": "none",
    "window_display": false
   }
  },
