Started to work on Neo package, specifically the graph database side

--- a/Notebooks/Neural Networks.ipynb
+++ b/Notebooks/Neural Networks.ipynb
@@ -14,19 +14,21 @@
    "execution_count": 60,
    "metadata": {
     "code_folding": [
-     0,
-     1,
-     16,
-     21,
-     26,
-     38,
-     49
+     0.0,
+     1.0,
+     16.0,
+     21.0,
+     26.0,
+     38.0,
+     49.0
     ]
    },
    "outputs": [],
    "source": [
     "TRAIN_DATA = [\n",
-    "    (\"A Bayesian network, Bayes network, belief network, Bayes(ian) model or probabilistic directed acyclic graphical model is a probabilistic graphical model (a type of statistical model) that represents a set of variables and their conditional dependencies via a directed acyclic graph (DAG).\", {\n",
+    "    (\"A Bayesian network, Bayes network, belief network, Bayes(ian) model or probabilistic directed acyclic graphical \"\n",
+    "     \"model is a probabilistic graphical model (a type of statistical model) that represents a set of variables and \"\n",
+    "     \"their conditional dependencies via a directed acyclic graph (DAG).\", { \n",
     "        'entities': [(2, 18, 'CONCEPT'),\n",
     "                     (20, 33, 'CONCEPT'),\n",
     "                     (35, 49, 'CONCEPT'),\n",
@@ -94,7 +96,7 @@
    "execution_count": 77,
    "metadata": {
     "code_folding": [
-     0
+     0.0
     ]
    },
    "outputs": [],
@@ -213,9 +215,9 @@
   },
   "varInspector": {
    "cols": {
-    "lenName": 16,
-    "lenType": 16,
-    "lenVar": 40
+    "lenName": 16.0,
+    "lenType": 16.0,
+    "lenVar": 40.0
    },
    "kernels_config": {
     "python": {
