Added methods for Category node, working on methods for Article node now

--- a/Notebooks/Testing/data.ipynb
+++ b/Notebooks/Testing/data.ipynb
@@ -18,9 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph = Database().default_graph\n",
-    "node = Node(\"First Node\")\n",
-    "wiki = WikiNode(\"Article\")"
+    "graph = Database().default_graph"
    ]
   },
   {
@@ -29,17 +27,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph.create(node)"
+    "wikinode = WikiNode(\"Set theory\", \"Article\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph.delete_all()\n",
+    "graph.create(wikinode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "database = Database()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2018, 4, 18, 18, 23, 23, 246000)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "database.store_creation_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'116a9f3c9365c5c3'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "database.store_id"
+   ]
   },
   {
    "cell_type": "code",
@@ -65,7 +115,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.3"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": true
   }
  },
  "nbformat": 4,
