Added mostly notebooks (updated cause one notebook didn't save correctly)

--- a/Notebooks/Article List from CSV.ipynb
+++ b/Notebooks/Article List from CSV.ipynb
@@ -2,11 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
-    "code_folding": [
-     0.0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -15,17 +13,19 @@
     "import wikipedia\n",
     "import spacy\n",
     "import textacy\n",
+    "import datetime\n",
     "\n",
-    "filepath = 'articles.csv'"
+    "wikipedia.set_rate_limiting(True, min_wait=datetime.timedelta(0, 0, 5000000))\n",
+    "\n",
+    "filepath = 'articles.csv'\n",
+    "corpus_savepath = 'wikicorpus'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
-    "code_folding": [
-     0.0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -42,33 +42,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['Outline of mathematics'], ['Mathematics'], ['Portal:Contents/Mathematics and logic'], ['Legendre moment'], ['User:SwathiSreeLuke7'], ['Intersection number'], ['Data-driven control system'], ['Pure mathematics'], ['Physical mathematics'], ['Mathematics Subject Classification']]\n"
-     ]
-    }
-   ],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "articles = list_from_csv(filepath)\n",
-    "print(articles[:10])"
+    "# print(articles[:10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "corpus = textacy.Corpus('en')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "code_folding": [
+     1.0
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nfor article in articles[:100]:\\n    \\n    try:\\n        wikipage = wikipedia.WikipediaPage(article)\\n    \\n        content = wikipage.content\\n        metadata = {\"name\": article}\\n    \\n        corpus.add_text(content, metadata=metadata)\\n        \\n    except AssertionError:\\n        continue\\n'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "for article in articles[:100]:\n",
+    "    \n",
+    "    try:\n",
+    "        wikipage = wikipedia.WikipediaPage(article)\n",
+    "    \n",
+    "        content = wikipage.content\n",
+    "        metadata = {\"name\": article}\n",
+    "    \n",
+    "        corpus.add_text(content, metadata=metadata)\n",
+    "        \n",
+    "    except AssertionError:\n",
+    "        continue\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Corpus(0 docs; 0 tokens)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "code_folding": []
+   },
+   "outputs": [],
+   "source": [
+    "def batch_load_texts(corpus, text_list, batch_size=5):\n",
+    "    iterable = text_list[:]\n",
+    "    length = len(iterable)\n",
+    "    batches = length // batch_size\n",
+    "    \n",
+    "    for i in range(batches):\n",
+    "        min_slice = i * (batch_size + 1)\n",
+    "        max_slice = min_slice + batch_size\n",
+    "        \n",
+    "        for article in iterable[min_slice: max_slice]:\n",
+    "            try:\n",
+    "                wikipage = wikipedia.WikipediaPage(article)\n",
+    "                corpus.add_text(wikipage.content, metadata = {\"name\": article})\n",
+    "                print(corpus)\n",
+    "                print(article)\n",
+    "            except:\n",
+    "                continue\n",
+    "        \n",
+    "        \n",
+    "        '''\n",
+    "        batch_size = 5\n",
+    "        batch 0:      min = 0,   max = 5    \n",
+    "        batch 1:      min = 6,   max = 11   min = i + batch_size,        max = 2 * batch_size + 1\n",
+    "        batch 2:      min = 12,  max = 17   min = i * (batch_size + 1)\n",
+    "        \n",
+    "        batch_size = 10\n",
+    "        batch 0:      min = 0,   max = 10\n",
+    "        batch 1:      min = 11,  max = 21\n",
+    "        batch 2:      min = 22,  max = 32\n",
+    "        \n",
+    "        batch_size = n\n",
+    "        batch i:        min = i,             max = min + n\n",
+    "        batch i + 1:    min = i * (n + 1)    max = min + n\n",
+    "        batch i + 2:\n",
+    "        '''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_load_texts(corpus, articles[:1000])\n",
+    "corpus.save(corpus_savepath)"
    ]
   },
   {
